# bboxfixer

./: .gitignore  README.md  bboxfixer-gui.spec  build_exe.bat  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bboxfixer/: __init__.py  __main__.py  __main_gui__.py  cli.py  generator.py  gui.py  models.py  parser.py  printer.py  xml_generator.py  xml_models.py
bboxfixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
samples/: receipt.xml  storno.xml
tests/: test_cli.py  test_generator.py  test_models.py  test_parser.py  test_printer.py  test_xml_models.py
tests/fixtures/: sample_receipts.csv  sample_receipts.json
